Fix admin combo box alignment

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -226,3 +226,8 @@ body {
     height: 25px;
     text-align: center
 }
+
+.input {
+    color: blue;
+    text-align: center
+}
